--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 
 
 
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
@@ -37,6 +39,31 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-youtube</artifactId>
+			<version>v3-rev221-1.25.0</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-jetty -->
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-jetty</artifactId>
+			<version>1.30.5</version>
+		</dependency>
+
+
+
+		<!--<dependency>-->
+			<!--<groupId>com.google.api-client</groupId>-->
+			<!--<artifactId>google-api-client</artifactId>-->
+			<!--<version>1.30.4</version>-->
+		<!--</dependency>-->
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
